# launch-deck

./: .gitignore  DESIGN_GUIDELINES.md  OAuth Client.txt  build_output.txt  fix_css.cjs  fix_env.ps1  hltb.html  index.html  package-lock.json  package.json  populate_mofin.cjs  test-edge.js  test-igdb.js  test-igdb2.js  test-lib.js  test-platforms.js  test_igdb.js  vite.config.js
.github/workflows/: release.yml
docs/: release.md
hltb_chunks/: b4e818d2c9172722.js  c92d8fcb7105e390.js  df7a21f246cc28a3.js  turbopack-79e8c3019838be45.js  turbopack-9dd1d54a6bd2fc99.js
public/: splash.html
scripts/: package-portable.ps1
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  build.rs  check.json  err.txt  error.txt  tauri.conf.json  tauri.release.conf.json  temp_error.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scanner.rs
src/context/: AuthContext.jsx  GameContext.jsx  NotificationContext.jsx  SettingsContext.jsx
src/data/: hardware_db.json
src/hooks/: useCountdown.js  useDiscoverGames.js  useGameDetailData.js  useGameSearch.js  useGames.js  useItadDeals.js  useLibraryProfile.js  useMyRig.js  useOnlineStatus.js  usePriceDeals.js  usePriceWatcher.js  useProfileAvatar.js  useScanner.js  useSettings.js  useUpcomingGame.js  useUpcomingGameExtended.js  useUpcomingGames.js  useVisibility.js
src/lib/: analyzeGamePerformance.js  avatarConstants.js  avatarService.js  catalogPromotion.js  cloudSync.js  db.js  dealMatching.js  detectHardware.js  executableNorm.js  (+19 more)
supabase/: config.toml
(+97 files in other folders)
